--- a/index.html
+++ b/index.html
@@ -1,7 +1,183 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>UNDER CONSTRUKTION</p>
-</body>
+<html lang="en">
+
+  <head>
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Das Beste oder nichts.">
+    <meta name="author" content="Pedro Marques">
+	
+    <title>Grčka Olives</title>
+	<link rel="shortcut icon" type="image/png" href="media/favicon.png">
+   
+	<link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
+   
+   
+    <link href="css/style.css" rel="stylesheet">
+	<link href="css/media-queries.css" rel="stylesheet">
+	
+	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+
+  </head>
+
+  <body  id="page-top">
+	<!-- ----- Navigation ----- -->
+	<header id="header" class="large">
+		<div class="container">
+			<nav id="navigation">
+				<a href="index.html"><img id="nav_logo" class="large" alt="nav_logo" src="media/Logo2.png"></a>
+				<ul id="nav_content">
+					<li><a href="#home">Home</a></li>
+					<li><a href="#nachrichten">News</a></li>
+					<li><a href="#">Brand</a></li>
+					<li><a href="#">Our Olives</a></li>
+					<li><a href="#">Team</a></li>
+					<li><a href="#">Gallerie</a></li>
+					<li><a href="#">Contact</a></li>
+					<li><a href="#">|GR|</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<!-- --- -->
+	<header id="mobile_header">
+		<div class="mobile_container">
+			<a href="index.html"><img id="mobile_nav_logo" src="media/Logo2.png"></a>
+			<a href="#" class="clickme btn"><span>≡</span> Menu</a>
+			<ul class="subdiv" style="display:none">
+				<li><a href="#verlinkung_home">Home</a></li>
+				<li><a href="#verlinkung_nachrichten">News</a></li>
+				<li><a href="#">Brand</a></li>
+				<li><a href="#">Our Olives</a></li>
+				<li><a href="#">Team</a></li>
+				<li><a href="#">Gallerie</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul>
+		</div>
+	</header>
+	
+	<!-- ----- ----- ----- -->
+	<span id="verlinkung_home"  class="verlinkungen"></span>
+	<section id="home">
+		<div id="home_title"><h1>Grčka Olives</h1></div>
+		<div id="rotate">
+			<div><h3>Quality Olives since 1769</h3></div>
+			<div><h3>A Olive a day keeps the doctor away!</h3></div>
+		</div>
+	</section>
+	
+	<span id="verlinkung_nachrichten"  class="verlinkungen"></span>
+	<section id="nachrichten">
+		<h1>News</h1>
+		
+		
+		<div class="grid-container-news">
+			<div class="N_Werbig">
+				<p>
+					LEER VLT WERBIG ODER EBAY KLEINANZEIGE ODER WHATSAPP JAAA MANNN 15K in EINER WOCHE
+				</p>
+			</div>
+			
+			<div class="N_Pres">
+				<img id="Nimg_Pres" src="media/pres.jpg" alt="">
+				<h3>Presidental Speach</h3>
+				<p>
+					Hi, my name is Proky and I Love Grčka Olives our national pride.
+				</p>
+				<p>
+					I would kill some one for one Grčka olive really, I would kill anyone for one olive trust me.
+				</p>
+				<p>
+					I support as federal president of Greece Grčka Olives and maybe I introduce a law that everyone in Grace sorry Greece must buy Grčka Olives 
+				</p>
+				<p class="DateNews">Ioannis Vlahos, 24.01.2019</p>
+			</div>
+			
+			<div class="N_Ang">
+				<img id="Nimg_Ang" src="media/ale1.jpg" alt="">
+				<h3>Mitarbeiter des Monats</h3>
+				<p>
+					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown 
+				</p>
+				<p class="DateNews">Ioannis Vlahos, 1.01.2019</p>
+			</div>
+			
+			<div class="N_Lambo">
+				<img id="Nimg_Lambo" src="media/lambo.jpg" alt="">
+				<h3>New Lamborghini</h3>
+				<p>
+					I am happy to announce that we have bought a new tractor. We made good money with our last crop, that’s why we were able to buy ourselves a new Lamborghini. Tuned by <a href="https://www.jp-performance.de/">JP Performance.</a>
+				</p>
+				<b>Specs:</b>
+				<p>
+					<b>Drivetrain:</b> 6.5 L V12 + Transmisson & AWD swapped from Lamborghini Aventador (Twin Turbo Conversion)
+					<b>HP / Nm :</b> 1860 HP / 1837 Nm		<b>Tires:</b> 385 Hoosier Drag Radials (all round)
+					<b>Weight:</b> Somewhere around 7 metric tons after weight reduction.
+
+				</p>
+				<p class="DateNews">Ioannis Vlahos, 28.10.2018</p>
+			</div>
+			
+			<div class="N_Snow">
+				<img id="Nimg_Snow" src="media/snow.jpg" alt="">
+				<h3>Snow in Crete</h3>
+				<p>
+					It’s a rare sight, to see snow in Crete. But it comes with some negative effects… This year’s last crop got completely destroyed, causing our financial goal of 200 Billion US Dollar to almost fail. But we made it, thanks to our recent partnership with the Supreme Leader of North Korea. Thanks Kim !
+				</p>
+				<p class="DateNews">Ioannis Vlahos, 21.12.2018</p>
+			</div>
+			
+			<div class="N_Baum">
+				<img id="Nimg_Baum" src="media/Old_Baum.png" alt="">
+				<h3>Happy Birthday to our oldest Olive tree!</h3>
+				<p>
+					My great-great-great-great-great-great-grandfather Dimostheris, planted this tree 250 Years ago. It is the first olive tree in our family bloodline. Yes, you understood that correctly. We plant, live eat and breathe olives, in fact we have olive-blood flowing through our veins. That’s why we would like to thank our very first tree, THANK YOU!!! Or in Greek ευχαριστώ!!!
+				</p>
+				<p class="DateNews">Ioannis Vlahos, 14.02.2018 </p>
+			</div>
+			<div class="N_Web">
+				<img id="Nimg_Web" src="media/Logo.png" alt="">
+				<h3>Website launched!</h3>
+				<p>
+					We are thrilled to announce the release of our freshly redesigned Website! Like every Company, we are very proud for keeping our customers happy for 250 years. We dedicate this masterpiece to our best-in-class Olives and would like to thank our loyal customers and our business partners.
+				</p>
+				<p class="DateNews">Aco Grčka, 21.01.2018</p>
+			</div>
+		</div>
+		
+	</section>
+	
+	
+	<!-- <div style="height:2000px; background-color:salmon;"></div> -->
+	
+	
+	
+	<footer id="footer">
+		<div id="footer_left" class="footer">&copy; Aco Grčka</div>
+		<div id="footer_right" class="footer">
+			<a href="https://www.instagram.com/aco.grcka/">Insta: Aco.Grcka</a>
+			<a href="#">Contact</a>
+			<a href="#">Newsletter</a>
+			<a href="#verlinkung_home">Nach Oben</a>
+		</div>
+	</footer>
+	
+	
+	<!-- ----- ----- ----- -->
+  
+  
+  
+  
+    <script src="js/script.js"></script>
+  
+  
+  
+
+
+  
+    
+
+  </body>
 </html>
