--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
 				<ul id="nav_content">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#nachrichten">News</a></li>
-					<li><a href="#">Brand</a></li>
-					<li><a href="#">Our Olives</a></li>
-					<li><a href="#">Team</a></li>
-					<li><a href="#">Gallerie</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="html/404.html">Brand</a></li>
+					<li><a href="html/404.html">Our Olives</a></li>
+					<li><a href="html/404.html">Team</a></li>
+					<li><a href="html/404.html">Gallerie</a></li>
+					<li><a href="html/404.html">Contact</a></li>
 					<li><a href="#">|GR|</a></li>
 				</ul>
 			</nav>
@@ -49,11 +49,11 @@
 			<ul class="subdiv" style="display:none">
 				<li><a href="#verlinkung_home">Home</a></li>
 				<li><a href="#verlinkung_nachrichten">News</a></li>
-				<li><a href="#">Brand</a></li>
-				<li><a href="#">Our Olives</a></li>
-				<li><a href="#">Team</a></li>
-				<li><a href="#">Gallerie</a></li>
-				<li><a href="#">Contact</a></li>
+				<li><a href="html/404.html">Brand</a></li>
+				<li><a href="html/404.html">Our Olives</a></li>
+				<li><a href="html/404.html">Team</a></li>
+				<li><a href="html/404.html">Gallerie</a></li>
+				<li><a href="html/404.html">Contact</a></li>
 			</ul>
 		</div>
 	</header>
@@ -64,7 +64,7 @@
 		<div id="home_title"><h1>Grčka Olives</h1></div>
 		<div id="rotate">
 			<div><h3>Quality Olives since 1769</h3></div>
-			<div><h3>A Olive a day keeps the doctor away!</h3></div>
+			<div><h3>An Olive a day keeps the doctor away!</h3></div>
 		</div>
 	</section>
 	
@@ -84,22 +84,22 @@
 				<img id="Nimg_Pres" src="media/pres.jpg" alt="">
 				<h3>Presidental Speach</h3>
 				<p>
-					Hi, my name is Proky and I Love Grčka Olives our national pride.
+					"Hi, my name is Proky and I Love Grčka Olives our national pride."
 				</p>
 				<p>
-					I would kill some one for one Grčka olive really, I would kill anyone for one olive trust me.
+					"I would kill some one for one Grčka olive really, I would kill anyone for one olive trust me."
 				</p>
 				<p>
-					I support as federal president of Greece Grčka Olives and maybe I introduce a law that everyone in Grace sorry Greece must buy Grčka Olives 
+					"I support as federal president of Greece Grčka Olives and maybe I introduce a law that everyone in Grace sorry Greece must buy Grčka Olives."
 				</p>
 				<p class="DateNews">Ioannis Vlahos, 24.01.2019</p>
 			</div>
 			
 			<div class="N_Ang">
 				<img id="Nimg_Ang" src="media/ale1.jpg" alt="">
-				<h3>Mitarbeiter des Monats</h3>
+				<h3>Employee of the month</h3>
 				<p>
-					Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown 
+					This is Elhandro Mwangi. Elhandro just broke his own record, in being employee of the month for 133 months straight. This is a well-deserved status, because Elhandro is a very hard working man. Just last month alone, he picked 152 metric tons of olives. He works 12.5 hours a day, six times a week. That is 300 hours a month. That’s why he deserves this Status a 133rd time.
 				</p>
 				<p class="DateNews">Ioannis Vlahos, 1.01.2019</p>
 			</div>
@@ -112,8 +112,8 @@
 				</p>
 				<b>Specs:</b>
 				<p>
-					<b>Drivetrain:</b> 6.5 L V12 + Transmisson & AWD swapped from Lamborghini Aventador (Twin Turbo Conversion)
-					<b>HP / Nm :</b> 1860 HP / 1837 Nm		<b>Tires:</b> 385 Hoosier Drag Radials (all round)
+					<b>Drivetrain:</b> 6.5 L V12 + Transmisson & AWD swapped from Lamborghini Aventador (Twin Turbo Conversion)<br>
+					<b>HP / Nm :</b> 1860 HP / 1837 Nm<br>		<b>Tires:</b> 385 Hoosier Drag Radials (all round)<br>
 					<b>Weight:</b> Somewhere around 7 metric tons after weight reduction.
 
 				</p>
@@ -133,7 +133,7 @@
 				<img id="Nimg_Baum" src="media/Old_Baum.png" alt="">
 				<h3>Happy Birthday to our oldest Olive tree!</h3>
 				<p>
-					My great-great-great-great-great-great-grandfather Dimostheris, planted this tree 250 Years ago. It is the first olive tree in our family bloodline. Yes, you understood that correctly. We plant, live eat and breathe olives, in fact we have olive-blood flowing through our veins. That’s why we would like to thank our very first tree, THANK YOU!!! Or in Greek ευχαριστώ!!!
+					My great-great-great-great-great-grandfather Dimostheris, planted this tree 250 Years ago. It is the first olive tree in our family bloodline. Yes, you understood that correctly. We plant, live eat and breathe olives, in fact we have olive-blood flowing through our veins. That’s why we would like to thank our very first tree, THANK YOU!!! Or in Greek ευχαριστώ!!!
 				</p>
 				<p class="DateNews">Ioannis Vlahos, 14.02.2018 </p>
 			</div>
