--- a/html/404.html
+++ b/html/404.html
@@ -60,9 +60,9 @@
 	
 	<!-- ----- ----- ----- -->
 	<span id="verlinkung_home"  class="verlinkungen"></span>
-	<section id="home">
+	<section id="NotFoundPage">
 		<div id="home_title"><h1>Ohhh Noo!</h1></div>
-			<div><img src="../media/Soon2.png"></div>
+		<div><img id="test" src="../media/Soon2.png"></div>
 	</section>
 	
 	
