--- a/html/404.html
+++ b/html/404.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Das Beste oder nichts.">
     <meta name="author" content="Pedro Marques">
 	
-    <title>Grčka Olives</title>
-	<link rel="shortcut icon" type="image/png" href="media/favicon.png">
+    <title>Ohh Noo!</title>
+	<link rel="shortcut icon" type="image/png" href="../media/favicon.png">
    
 	<link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
    
