--- a/html/404.html
+++ b/html/404.html
@@ -4,9 +4,9 @@
   <head>
 
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Das Beste oder nichts.">
-    <meta name="author" content="Pedro Marques">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <meta name="description" content="The best or nothing.">
+    <meta name="author" content="Aco Grčka">
 	
     <title>Ohh Noo!</title>
 	<link rel="shortcut icon" type="image/png" href="../media/favicon.png">
@@ -54,6 +54,7 @@
 				<li><a href="404.html">Team</a></li>
 				<li><a href="404.html">Gallerie</a></li>
 				<li><a href="404.html">Contact</a></li>
+				<li><a href="404.html">|GR|</a></li>
 			</ul>
 		</div>
 	</header>
