--- a/html/en/index.html
+++ b/html/en/index.html
@@ -9,13 +9,13 @@
     <meta name="author" content="Aco Grčka">
 	
     <title>Grčka Olives</title>
-	<link rel="shortcut icon" type="image/png" href="media/favicon.png">
+	<link rel="shortcut icon" type="image/png" href="../../media/favicon.png">
    
 	<link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
    
    
-    <link href="css/style.css" rel="stylesheet">
-	<link href="css/media-queries.css" rel="stylesheet">
+    <link href="../../css/style.css" rel="stylesheet">
+	<link href="../../css/media-queries.css" rel="stylesheet">
 	
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
@@ -29,14 +29,14 @@
 			<nav id="navigation">
 				<a href="index.html"><img id="nav_logo" class="large" alt="nav_logo" src="media/Logo2.png"></a>
 				<ul id="nav_content">
-					<li><a href="#home">Σπίτι</a></li>
-					<li><a href="#nachrichten">Νέα</a></li>
-					<li><a href="html/404.html">μάρκα</a></li>
-					<li><a href="html/404.html">τις ελιές μας</a></li>
-					<li><a href="html/404.html">ομάδα</a></li>
-					<li><a href="html/404.html">γκαλερί</a></li>
-					<li><a href="html/404.html">Επικοινωνία</a></li>
-					<li><a href="html/en/index.html">|EN|</a></li>
+					<li><a href="#home">Home</a></li>
+					<li><a href="#nachrichten">News</a></li>
+					<li><a href="html/404.html">Brand</a></li>
+					<li><a href="html/404.html">Our Olives</a></li>
+					<li><a href="html/404.html">Team</a></li>
+					<li><a href="html/404.html">Gallerie</a></li>
+					<li><a href="html/404.html">Contact</a></li>
+					<li><a href="../../index.html">|GR|</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -44,7 +44,7 @@
 	<!-- --- -->
 	<header id="mobile_header">
 		<div class="mobile_container">
-			<a href="index.html"><img id="mobile_nav_logo" src="media/Logo2.png"></a>
+			<a href="index.html"><img id="mobile_nav_logo" src="../../media/Logo2.png"></a>
 			<a href="#" class="clickme btn"><span>≡</span> Menu</a>
 			<ul class="subdiv" style="display:none">
 				<li><a href="#verlinkung_home">Home</a></li>
@@ -171,7 +171,7 @@
   
   
   
-    <script src="js/script.js"></script>
+    <script src="../../js/script.js"></script>
   
   
   
