--- a/html/en/index.html
+++ b/html/en/index.html
@@ -27,7 +27,7 @@
 	<header id="header" class="large">
 		<div class="container">
 			<nav id="navigation">
-				<a href="index.html"><img id="nav_logo" class="large" alt="nav_logo" src="media/Logo2.png"></a>
+				<a href="index.html"><img id="nav_logo" class="large" alt="nav_logo" src="../../media/Logo2.png"></a>
 				<ul id="nav_content">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#nachrichten">News</a></li>
