--- a/html/en/index.html
+++ b/html/en/index.html
@@ -82,8 +82,8 @@
 			</div>
 			
 			<div class="N_Pres">
-				<img id="Nimg_Pres" src="media/pres.jpg" alt="">
-				<h3>Presidental Speach</h3>
+				<img id="Nimg_Pres" src="../../media/pres.jpg" alt="">
+				<h3>Presidential Speach</h3>
 				<p>
 					"Hi, my name is Proky and I Love Grčka Olives our national pride."
 				</p>
@@ -97,7 +97,7 @@
 			</div>
 			
 			<div class="N_Ang">
-				<img id="Nimg_Ang" src="media/ale1.jpg" alt="">
+				<img id="Nimg_Ang" src="../../media/ale1.jpg" alt="">
 				<h3>Employee of the month</h3>
 				<p>
 					This is Elhandro Mwangi. Elhandro just broke his own record, in being employee of the month for 133 months straight. This is a well-deserved status, because Elhandro is a very hard working man. Just last month alone, he picked 152 metric tons of olives. He works 12.5 hours a day, six times a week. That is 300 hours a month. That’s why he deserves this Status a 133rd time.
@@ -106,7 +106,7 @@
 			</div>
 			
 			<div class="N_Lambo">
-				<img id="Nimg_Lambo" src="media/lambo.jpg" alt="">
+				<img id="Nimg_Lambo" src="../../media/lambo.jpg" alt="">
 				<h3>New Lamborghini</h3>
 				<p>
 					I am happy to announce that we have bought a new tractor. We made good money with our last crop, that’s why we were able to buy ourselves a new Lamborghini. Tuned by <a href="https://www.jp-performance.de/">JP Performance.</a>
@@ -122,7 +122,7 @@
 			</div>
 			
 			<div class="N_Snow">
-				<img id="Nimg_Snow" src="media/snow.jpg" alt="">
+				<img id="Nimg_Snow" src="../../media/snow.jpg" alt="">
 				<h3>Snow in Crete</h3>
 				<p>
 					It’s a rare sight, to see snow in Crete. But it comes with some negative effects… This year’s last crop got completely destroyed, causing our financial goal of 200 Billion US Dollar to almost fail. But we made it, thanks to our recent partnership with the Supreme Leader of North Korea. Thanks Kim !
@@ -131,7 +131,7 @@
 			</div>
 			
 			<div class="N_Baum">
-				<img id="Nimg_Baum" src="media/Old_Baum.png" alt="">
+				<img id="Nimg_Baum" src="../../media/Old_Baum.png" alt="">
 				<h3>Happy Birthday to our oldest Olive tree!</h3>
 				<p>
 					My great-great-great-great-great-grandfather Dimostheris, planted this tree 250 Years ago. It is the first olive tree in our family bloodline. Yes, you understood that correctly. We plant, live eat and breathe olives, in fact we have olive-blood flowing through our veins. That’s why we would like to thank our very first tree, THANK YOU!!! Or in Greek ευχαριστώ!!!
@@ -139,7 +139,7 @@
 				<p class="DateNews">Ioannis Vlahos, 14.02.2018 </p>
 			</div>
 			<div class="N_Web">
-				<img id="Nimg_Web" src="media/Logo.png" alt="">
+				<img id="Nimg_Web" src="../../media/Logo.png" alt="">
 				<h3>Website launched!</h3>
 				<p>
 					We are thrilled to announce the release of our freshly redesigned Website! Like every Company, we are very proud for keeping our customers happy for 250 years. We dedicate this masterpiece to our best-in-class Olives and would like to thank our loyal customers and our business partners.
@@ -161,7 +161,7 @@
 			<a href="https://www.instagram.com/aco.grcka/">Insta: Aco.Grcka</a>
 			<a href="#">Contact</a>
 			<a href="#">Newsletter</a>
-			<a href="#verlinkung_home">Nach Oben</a>
+			<a href="#verlinkung_home">Go UP</a>
 		</div>
 	</footer>
 	
