--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The best or nothing.">
     <meta name="author" content="Aco Grčka">
 	
-    <title>Grčka Olives</title>
+    <title>Grčka ελιές</title>
 	<link rel="shortcut icon" type="image/png" href="media/favicon.png">
    
 	<link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
@@ -47,14 +47,14 @@
 			<a href="index.html"><img id="mobile_nav_logo" src="media/Logo2.png"></a>
 			<a href="#" class="clickme btn"><span>≡</span> Menu</a>
 			<ul class="subdiv" style="display:none">
-				<li><a href="#verlinkung_home">Home</a></li>
-				<li><a href="#verlinkung_nachrichten">News</a></li>
-				<li><a href="html/404.html">Brand</a></li>
-				<li><a href="html/404.html">Our Olives</a></li>
-				<li><a href="html/404.html">Team</a></li>
-				<li><a href="html/404.html">Gallerie</a></li>
-				<li><a href="html/404.html">Contact</a></li>
-				<li><a href="404.html">|GR|</a></li>
+				<li><a href="#verlinkung_home">Σπίτι</a></li>
+				<li><a href="#verlinkung_nachrichten">Νέα</a></li>
+				<li><a href="html/404.html">μάρκα</a></li>
+				<li><a href="html/404.html">τις ελιές μας</a></li>
+				<li><a href="html/404.html">ομάδα</a></li>
+				<li><a href="html/404.html">γκαλερί</a></li>
+				<li><a href="html/404.html">Επικοινωνία</a></li>
+				<li><a href="404.html">|EN|</a></li>
 			</ul>
 		</div>
 	</header>
@@ -62,16 +62,16 @@
 	<!-- ----- ----- ----- -->
 	<span id="verlinkung_home"  class="verlinkungen"></span>
 	<section id="home">
-		<div id="home_title"><h1>Grčka Olives</h1></div>
+		<div id="home_title"><h1>Grčka ελιές</h1></div>
 		<div id="rotate">
-			<div><h3>Quality Olives since 1769</h3></div>
-			<div><h3>An Olive a day keeps the doctor away!</h3></div>
+			<div><h3>Ελιές ποιότητας από το 1769</h3></div>
+			<div><h3>Μια μέρα ελιάς κρατά τον γιατρό μακριά!</h3></div>
 		</div>
 	</section>
 	
 	<span id="verlinkung_nachrichten"  class="verlinkungen"></span>
 	<section id="nachrichten">
-		<h1>News</h1>
+		<h1>Νέα</h1>
 		
 		
 		<div class="grid-container-news">
@@ -83,66 +83,66 @@
 			
 			<div class="N_Pres">
 				<img id="Nimg_Pres" src="media/pres.jpg" alt="">
-				<h3>Presidental Speach</h3>
+				<h3>Προεδρική ομιλία</h3>
 				<p>
-					"Hi, my name is Proky and I Love Grčka Olives our national pride."
+					"Γεια σου, το όνομά μου είναι Proky και αγαπώ τη Γκίκα Ελιές της εθνικής μας υπερηφάνειας."
 				</p>
 				<p>
-					"I would kill some one for one Grčka olive really, I would kill anyone for one olive trust me."
+					"Θα σκοτώσω κάποιον για μια γκίκα ελιά πραγματικά, θα σκότωνα κάποιον για μια ελιά να με εμπιστευτείς."
 				</p>
 				<p>
-					"I support as federal president of Greece Grčka Olives and maybe I introduce a law that everyone in Grace sorry Greece must buy Grčka Olives."
+					"Υποστηρίζω ως ομοσπονδιακός πρόεδρος της Ελλάδας Γκλσκό Ελιές και ίσως εισάγω ένα νόμο που όλοι στη Grace συγγνώμη για την Ελλάδα πρέπει να αγοράσουν ελιές της Γκίκα".
 				</p>
-				<p class="DateNews">Ioannis Vlahos, 24.01.2019</p>
+				<p class="DateNews">Ιωάννης Βλάχος, 24.01.2019</p>
 			</div>
 			
 			<div class="N_Ang">
 				<img id="Nimg_Ang" src="media/ale1.jpg" alt="">
-				<h3>Employee of the month</h3>
+				<h3>υπάλληλος του μήνα</h3>
 				<p>
-					This is Elhandro Mwangi. Elhandro just broke his own record, in being employee of the month for 133 months straight. This is a well-deserved status, because Elhandro is a very hard working man. Just last month alone, he picked 152 metric tons of olives. He works 12.5 hours a day, six times a week. That is 300 hours a month. That’s why he deserves this Status a 133rd time.
+					Αυτό είναι Elhandro Mwangi. Ο Elhandro έσπασε μόνο το δικό του ρεκόρ, με το να είναι υπάλληλος του μήνα για 133 μήνες κατ 'ευθείαν. Αυτό είναι ένα καλά αποτιθέμενο καθεστώς, επειδή ο Elhandro είναι ένας πολύ σκληρός άνδρας. Μόλις τον περασμένο μήνα, πήρε 152 μετρικούς τόνους ελιές. Εργάζεται 12,5 ώρες την ημέρα, έξι φορές την εβδομάδα. Αυτό είναι 300 ώρες το μήνα. Γι 'αυτό αξίζει αυτό το καθεστώς μια 133η φορά.
 				</p>
-				<p class="DateNews">Ioannis Vlahos, 1.01.2019</p>
+				<p class="DateNews">Ιωάννης Βλάχος, 1.01.2019</p>
 			</div>
 			
 			<div class="N_Lambo">
 				<img id="Nimg_Lambo" src="media/lambo.jpg" alt="">
-				<h3>New Lamborghini</h3>
+				<h3>Νέα Lamborghini</h3>
 				<p>
-					I am happy to announce that we have bought a new tractor. We made good money with our last crop, that’s why we were able to buy ourselves a new Lamborghini. Tuned by <a href="https://www.jp-performance.de/">JP Performance.</a>
+					Είμαι στην ευχάριστη θέση να ανακοινώσω ότι έχουμε αγοράσει ένα νέο τρακτέρ. Κάναμε καλά χρήματα με την τελευταία μας συγκομιδή, γι 'αυτό ήμασταν σε θέση να αγοράσουμε τον εαυτό μας ένα νέο Lamborghini. Συντονισμένη από την <a href="https://www.jp-performance.de/">JP Performance.</a>
 				</p>
-				<b>Specs:</b>
+				<b>Διόπτρα:</b>
 				<p>
-					<b>Drivetrain:</b> 6.5 L V12 + Transmisson & AWD swapped from Lamborghini Aventador (Twin Turbo Conversion)<br>
-					<b>HP / Nm :</b> 1860 HP / 1837 Nm<br>		<b>Tires:</b> 385 Hoosier Drag Radials (all round)<br>
-					<b>Weight:</b> Somewhere around 7 metric tons after weight reduction.
+					<b>Έλεγχος:</b> 6.5 L V12 + Transmisson & AWD ανταλλάσσονται από το Lamborghini Aventador (Twin Turbo Conversion)<br>
+					<b>HP / Nm :</b> 1860 HP / 1837 Nm<br>		<b>Ελαστικά:</b> 385 Hoosier Drag Radials (όλα γύρω)<br>
+					<b>Βάρος:</b> Κάπου γύρω στους 7 μετρικούς τόνους μετά τη μείωση βάρους.
 
 				</p>
-				<p class="DateNews">Ioannis Vlahos, 28.10.2018</p>
+				<p class="DateNews">Ιωάννης Βλάχος, 28.10.2018</p>
 			</div>
 			
 			<div class="N_Snow">
 				<img id="Nimg_Snow" src="media/snow.jpg" alt="">
-				<h3>Snow in Crete</h3>
+				<h3>Χιόνι στην Κρήτη</h3>
 				<p>
-					It’s a rare sight, to see snow in Crete. But it comes with some negative effects… This year’s last crop got completely destroyed, causing our financial goal of 200 Billion US Dollar to almost fail. But we made it, thanks to our recent partnership with the Supreme Leader of North Korea. Thanks Kim !
+					Είναι σπάνιο θέαμα, για να δείτε το χιόνι στην Κρήτη. Αλλά έρχεται με κάποιες αρνητικές συνέπειες ... Η τελευταία καλλιέργεια του φετινού καταστράφηκε ολοσχερώς, προκαλώντας σχεδόν τον αποτυχία του οικονομικού μας στόχου 200 δισεκατομμυρίων δολαρίων. Αλλά το κάναμε, χάρη στην πρόσφατη συνεργασία μας με τον ανώτατο ηγέτη της Βόρειας Κορέας. Ευχαριστώ τον Kim!
 				</p>
-				<p class="DateNews">Ioannis Vlahos, 21.12.2018</p>
+				<p class="DateNews">Ιωάννης Βλάχος, 21.12.2018</p>
 			</div>
 			
 			<div class="N_Baum">
 				<img id="Nimg_Baum" src="media/Old_Baum.png" alt="">
-				<h3>Happy Birthday to our oldest Olive tree!</h3>
+				<h3>Χρόνια πολλά για την παλαιότερη μας ελιά!</h3>
 				<p>
-					My great-great-great-great-great-grandfather Dimostheris, planted this tree 250 Years ago. It is the first olive tree in our family bloodline. Yes, you understood that correctly. We plant, live eat and breathe olives, in fact we have olive-blood flowing through our veins. That’s why we would like to thank our very first tree, THANK YOU!!! Or in Greek ευχαριστώ!!!
+					Ο μεγάλος μου υπερήφανος Δημοσθέρης, φυτεύτηκε αυτό το δέντρο πριν από 250 χρόνια. Είναι η πρώτη ελιά στην οικογένεια της οικογένειας. Ναι, το καταλάβατε σωστά. Φυτεύουμε, ζούμε και αναπνέουμε ελιές, στην πραγματικότητα έχουμε ελαιόλαδο που ρέει μέσα από τις φλέβες μας. Γι 'αυτό θα θέλαμε να ευχαριστήσουμε το πρώτο μας δέντρο, ΕΥΧΑΡΙΣΤΟΥΜΕ !!! Ή στα ελληνικά ευχαριστώ !!!
 				</p>
-				<p class="DateNews">Ioannis Vlahos, 14.02.2018 </p>
+				<p class="DateNews">Ιωάννης Βλάχος, 14.02.2018</p>
 			</div>
 			<div class="N_Web">
 				<img id="Nimg_Web" src="media/Logo.png" alt="">
-				<h3>Website launched!</h3>
+				<h3>Η ιστοσελίδα ξεκίνησε!</h3>
 				<p>
-					We are thrilled to announce the release of our freshly redesigned Website! Like every Company, we are very proud for keeping our customers happy for 250 years. We dedicate this masterpiece to our best-in-class Olives and would like to thank our loyal customers and our business partners.
+					Είμαστε ενθουσιασμένοι που θα ανακοινώσουμε την κυκλοφορία του φρεσκοκατασκευασμένου ιστοτόπου μας! Όπως κάθε εταιρεία, είμαστε πολύ περήφανοι που διατηρούμε τους πελάτες μας ευτυχείς για 250 χρόνια. Αφιερώνουμε αυτό το αριστούργημα στις καλύτερες ελιές μας και θέλουμε να ευχαριστήσουμε τους πιστούς πελάτες μας και τους συνεργάτες μας.
 				</p>
 				<p class="DateNews">Aco Grčka, 21.01.2018</p>
 			</div>
@@ -159,9 +159,9 @@
 		<div id="footer_left" class="footer">&copy; Aco Grčka</div>
 		<div id="footer_right" class="footer">
 			<a href="https://www.instagram.com/aco.grcka/">Insta: Aco.Grcka</a>
-			<a href="#">Contact</a>
-			<a href="#">Newsletter</a>
-			<a href="#verlinkung_home">Nach Oben</a>
+			<a href="html/404.html">Επικοινωνία</a>
+			<a href="html/404.html">Ενημερωτικό δελτίο</a>
+			<a href="#verlinkung_home">ανεβαίνω</a>
 		</div>
 	</footer>
 	
