--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 				<li><a href="html/404.html">ομάδα</a></li>
 				<li><a href="html/404.html">γκαλερί</a></li>
 				<li><a href="html/404.html">Επικοινωνία</a></li>
-				<li><a href="404.html">|EN|</a></li>
+				<li><a href="html/en/index.html">|EN|</a></li>
 			</ul>
 		</div>
 	</header>
