--- a/html/en/index.html
+++ b/html/en/index.html
@@ -54,7 +54,7 @@
 				<li><a href="html/404.html">Team</a></li>
 				<li><a href="html/404.html">Gallerie</a></li>
 				<li><a href="html/404.html">Contact</a></li>
-				<li><a href="404.html">|GR|</a></li>
+				<li><a href="../../index.html">|GR|</a></li>
 			</ul>
 		</div>
 	</header>
