--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
 		
 		<div class="grid-container-news">
 			<div class="N_Werbig">
-				<p>
-					LEER VLT WERBIG ODER EBAY KLEINANZEIGE ODER WHATSAPP JAAA MANNN 15K in EINER WOCHE
-				</p>
+				<iframe width="auto" height="100%" src="https://www.youtube-nocookie.com/embed/nvQNwTGb6L4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
 			
 			<div class="N_Pres">
