final commit home maby

--- a/html/en/index.html
+++ b/html/en/index.html
@@ -31,11 +31,11 @@
 				<ul id="nav_content">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#nachrichten">News</a></li>
-					<li><a href="html/404.html">Brand</a></li>
-					<li><a href="html/404.html">Our Olives</a></li>
-					<li><a href="html/404.html">Team</a></li>
-					<li><a href="html/404.html">Gallerie</a></li>
-					<li><a href="html/404.html">Contact</a></li>
+					<li><a href="../404.html">Brand</a></li>
+					<li><a href="../404.html">Our Olives</a></li>
+					<li><a href="../404.html">Team</a></li>
+					<li><a href="../404.html">Gallerie</a></li>
+					<li><a href="../404.html">Contact</a></li>
 					<li><a href="../../index.html">|GR|</a></li>
 				</ul>
 			</nav>
@@ -49,11 +49,11 @@
 			<ul class="subdiv" style="display:none">
 				<li><a href="#verlinkung_home">Home</a></li>
 				<li><a href="#verlinkung_nachrichten">News</a></li>
-				<li><a href="html/404.html">Brand</a></li>
-				<li><a href="html/404.html">Our Olives</a></li>
-				<li><a href="html/404.html">Team</a></li>
-				<li><a href="html/404.html">Gallerie</a></li>
-				<li><a href="html/404.html">Contact</a></li>
+				<li><a href="../404.html">Brand</a></li>
+				<li><a href="../404.html">Our Olives</a></li>
+				<li><a href="../404.html">Team</a></li>
+				<li><a href="../404.html">Gallerie</a></li>
+				<li><a href="../404.html">Contact</a></li>
 				<li><a href="../../index.html">|GR|</a></li>
 			</ul>
 		</div>
