--- a/html/404.html
+++ b/html/404.html
@@ -44,7 +44,7 @@
 	<!-- --- -->
 	<header id="mobile_header">
 		<div class="mobile_container">
-			<a href="index.html"><img id="mobile_nav_logo" src="../media/Logo2.png"></a>
+			<a href="../index.html"><img id="mobile_nav_logo" src="../media/Logo2.png"></a>
 			<a href="#" class="clickme btn"><span>≡</span> Menu</a>
 			<ul class="subdiv" style="display:none">
 				<li><a href="../index.html">Home</a></li>
