--- a/html/en/index.html
+++ b/html/en/index.html
@@ -34,7 +34,7 @@
 					<li><a href="../404.html">Brand</a></li>
 					<li><a href="../404.html">Our Olives</a></li>
 					<li><a href="../404.html">Team</a></li>
-					<li><a href="../404.html">Gallerie</a></li>
+					<li><a href="../404.html">Gallery</a></li>
 					<li><a href="../404.html">Contact</a></li>
 					<li><a href="../../index.html">|GR|</a></li>
 				</ul>
@@ -52,7 +52,7 @@
 				<li><a href="../404.html">Brand</a></li>
 				<li><a href="../404.html">Our Olives</a></li>
 				<li><a href="../404.html">Team</a></li>
-				<li><a href="../404.html">Gallerie</a></li>
+				<li><a href="../404.html">Gallery</a></li>
 				<li><a href="../404.html">Contact</a></li>
 				<li><a href="../../index.html">|GR|</a></li>
 			</ul>
