--- a/index.html
+++ b/index.html
@@ -72,9 +72,25 @@
 	<span id="verlinkung_nachrichten"  class="verlinkungen"></span>
 	<section id="nachrichten">
 		<h1>Νέα</h1>
-		
-		
 		<div class="grid-container-news">
+		
+			<div class="N_Nobel">
+				<img id="Nimg_Nobel" src="media/nobel.png" alt="">
+				<h3>Προεδρική ομιλία</h3>
+				<p>
+					"Γεια σου, το όνομά μου είναι Proky και αγαπώ τη Γκίκα Ελιές της εθνικής μας υπερηφάνειας."
+				</p>
+			</div>
+			
+			<div class="N_Formula">
+				<img id="Nimg_Formula" src="media/team.png" alt="">
+				<h3>Προεδρική ομιλία</h3>
+				<p>
+					"Γεια σου, το όνομά μου είναι Proky και αγαπώ τη Γκίκα Ελιές της εθνικής μας υπερηφάνειας."
+				</p>
+			</div>
+		
+		
 			<div class="N_Werbig">
 				<iframe width="auto" height="100%" src="https://www.youtube-nocookie.com/embed/nvQNwTGb6L4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
