--- a/html/en/index.html
+++ b/html/en/index.html
@@ -81,6 +81,7 @@
 				<p>
 					"Γεια σου, το όνομά μου είναι Proky και αγαπώ τη Γκίκα Ελιές της εθνικής μας υπερηφάνειας."
 				</p>
+				<p class="DateNews">Ioannis Vlahos, 24.01.2019</p>
 			</div>
 			
 			<div class="N_Formula">
@@ -89,7 +90,9 @@
 				<p>
 					"Γεια σου, το όνομά μου είναι Proky και αγαπώ τη Γκίκα Ελιές της εθνικής μας υπερηφάνειας."
 				</p>
+				<p class="DateNews">Ioannis Vlahos, 24.01.2019</p>
 			</div>
+			
 			<div class="N_Werbig">
 				<iframe width="auto" height="100%" src="https://www.youtube-nocookie.com/embed/nvQNwTGb6L4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			</div>
