--- a/html/en/index.html
+++ b/html/en/index.html
@@ -31,7 +31,7 @@
 				<ul id="nav_content">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#nachrichten">News</a></li>
-					<li><a href="../404.html">Brand</a></li>
+					<li><a href="brand.html">Brand</a></li>
 					<li><a href="../404.html">Our Olives</a></li>
 					<li><a href="../404.html">Team</a></li>
 					<li><a href="../404.html">Gallery</a></li>
@@ -49,7 +49,7 @@
 			<ul class="subdiv" style="display:none">
 				<li><a href="#verlinkung_home">Home</a></li>
 				<li><a href="#verlinkung_nachrichten">News</a></li>
-				<li><a href="../404.html">Brand</a></li>
+				<li><a href="brand.html">Brand</a></li>
 				<li><a href="../404.html">Our Olives</a></li>
 				<li><a href="../404.html">Team</a></li>
 				<li><a href="../404.html">Gallery</a></li>
