--- a/html/en/brand.html
+++ b/html/en/brand.html
@@ -64,37 +64,58 @@
 		
 	<span id="verlinkung_nachrichten"  class="verlinkungen"></span>
 	<section id="brand">
-		<section id="Y1" class="brand_gerade">
+		<section id="Y1" class="brand_first">
 			<div id="brand_body">
 				<h1 class="brand_h1">1769</h1>
 			
 			
 			</div>
-			<a href=""><img id="brand_arrow" src="../../media/arrow.png" alt=""></a>
+			
+			<a href="#verlinkung_brand_2">
+				<img id="brand_arrow" src="../../media/arrow.png" alt="">
+			</a>
 		</section>
 		
+		<span id="verlinkung_brand_2"  class="verlinkungen"></span>
 		<section id="Y2" class="brand_ungerade">
 			<div id="brand_body">
 				<h1 class="brand_h1">1769</h1>
 			
 			
 			</div>
-			<a href=""><img id="brand_arrow" src="../../media/arrow.png" alt=""></a>
-		
+			
+			<a href="#verlinkung_brand_3">
+				<img id="brand_arrow" src="../../media/arrow.png" alt="">
+			</a>		
 		</section>
+		
+		<span id="verlinkung_brand_3"  class="verlinkungen"></span>
 		<section id="Y3" class="brand_gerade">
 			<div id="brand_body">
 				<h1 class="brand_h1">1769</h1>
 			
 			
 			</div>
-			<a href=""><img id="brand_arrow" src="../../media/arrow.png" alt=""></a>
+			
+			<a href="#verlinkung_brand_4">
+				<img id="brand_arrow" src="../../media/arrow.png" alt="">			
+			</a>		
+		</section>
 		
+		
+		
+		
+		<span id="verlinkung_brand_4"  class="verlinkungen"></span>
+		<section id="Y3" class="brand_last">
+			<div id="brand_body">
+				<h1 class="brand_h1">1769</h1>
+			
+			
+			</div>	
 		</section>
 	</section>
 	
 	
-	<!-- <div style="height:2000px; background-color:salmon;"></div> -->
 	
 	
 	
