--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<li><a href="html/404.html">τις ελιές μας</a></li>
 					<li><a href="html/404.html">ομάδα</a></li>
 					<li><a href="html/404.html">γκαλερί</a></li>
-					<li><a href="html/404.html">Επικοινωνία</a></li>
+					<li><a href="html/contact.html">Επικοινωνία</a></li>
 					<li><a href="html/en/index.html">|EN|</a></li>
 				</ul>
 			</nav>
@@ -53,7 +53,7 @@
 				<li><a href="html/404.html">τις ελιές μας</a></li>
 				<li><a href="html/404.html">ομάδα</a></li>
 				<li><a href="html/404.html">γκαλερί</a></li>
-				<li><a href="html/404.html">Επικοινωνία</a></li>
+				<li><a href="html/contact.html">Επικοινωνία</a></li>
 				<li><a href="html/en/index.html">|EN|</a></li>
 			</ul>
 		</div>
