--- a/html/contact.html
+++ b/html/contact.html
@@ -61,10 +61,36 @@
 	
 	<!-- ----- ----- ----- -->
 	<form id="contact" action="https://formspree.io/aco.grcka@gmail.com" method="POST">
-		<input type="text" name="name">
-		<input type="email" name="_replyto">
+	
+	<div class="container">
+  <form action="/action_page.php">
+    <label for="fname">First Name</label>
+    <input type="text" id="fname" name="firstname" placeholder="Your name..">
+
+    <label for="lname">Last Name</label>
+    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+
+    <label for="country">Country</label>
+    <select id="country" name="country">
+      <option value="australia">Australia</option>
+      <option value="canada">Canada</option>
+      <option value="usa">USA</option>
+    </select>
+
+    <label for="subject">Subject</label>
+    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+
+    <input type="submit" value="Submit">
+ 
+	
+	
+	
+	
+	
+		<input type="email" name="_replyto" placeholder="dini mail">
 		<input type="submit" value="Send">
 	</form>
+	</div>
 	
 	
 	
