--- a/html/contact.html
+++ b/html/contact.html
@@ -8,7 +8,7 @@
     <meta name="description" content="The best or nothing.">
     <meta name="author" content="Aco Grčka">
 	
-    <title>Ohh Noo!</title>
+    <title>Επικοινωνία</title>
 	<link rel="shortcut icon" type="image/png" href="../media/favicon.png">
    
 	<link href='https://fonts.googleapis.com/css?family=Cabin:700' rel='stylesheet' type='text/css'>
@@ -31,12 +31,12 @@
 				<ul id="nav_content">
 					<li><a href="../index.html">Σπίτι</a></li>
 					<li><a href="../index.html#nachrichten">Νέα</a></li>
-					<li><a href="html/404.html">μάρκα</a></li>
-					<li><a href="html/404.html">τις ελιές μας</a></li>
-					<li><a href="html/404.html">ομάδα</a></li>
-					<li><a href="html/404.html">γκαλερί</a></li>
-					<li><a href="html/404.html">Επικοινωνία</a></li>
-					<li><a href="html/en/index.html">|EN|</a></li>
+					<li><a href="404.html">μάρκα</a></li>
+					<li><a href="404.html">τις ελιές μας</a></li>
+					<li><a href="404.html">ομάδα</a></li>
+					<li><a href="404.html">γκαλερί</a></li>
+					<li><a href="404.html">Επικοινωνία</a></li>
+					<li><a href="en/index.html">|EN|</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -49,45 +49,45 @@
 			<ul class="subdiv" style="display:none">
 				<li><a href="../index.html">Σπίτι</a></li>
 				<li><a href="../index.html#nachrichten">Νέα</a></li>
-				<li><a href="html/404.html">μάρκα</a></li>
-				<li><a href="html/404.html">τις ελιές μας</a></li>
-				<li><a href="html/404.html">ομάδα</a></li>
-				<li><a href="html/404.html">γκαλερί</a></li>
-				<li><a href="html/contact.html">Επικοινωνία</a></li>
-				<li><a href="html/en/index.html">|EN|</a></li>
+				<li><a href="404.html">μάρκα</a></li>
+				<li><a href="404.html">τις ελιές μας</a></li>
+				<li><a href="404.html">ομάδα</a></li>
+				<li><a href="404.html">γκαλερί</a></li>
+				<li><a href="contact.html">Επικοινωνία</a></li>
+				<li><a href="en/index.html">|EN|</a></li>
 			</ul>
 		</div>
 	</header>
 	
 	<!-- ----- ----- ----- -->
-	<form id="contact" action="https://formspree.io/aco.grcka@gmail.com" method="POST">
 	
-	<div class="container">
-  <form action="/action_page.php">
-    <label for="fname">First Name</label>
-    <input type="text" id="fname" name="firstname" placeholder="Your name..">
-
-    <label for="lname">Last Name</label>
-    <input type="text" id="lname" name="lastname" placeholder="Your last name..">
-
-    <label for="country">Country</label>
-    <select id="country" name="country">
-      <option value="australia">Australia</option>
-      <option value="canada">Canada</option>
-      <option value="usa">USA</option>
-    </select>
-
-    <label for="subject">Subject</label>
-    <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
-
-    <input type="submit" value="Submit">
- 
+	<section id="contact1">
 	
 	
 	
 	
 	
+	
+		<form id="contact" action="https://formspree.io/aco.grcka@gmail.com" method="POST">
+			<label for="fname">First Name</label>
+			<input type="text" id="fname" name="firstname" placeholder="Your name..">
+			
+			<label for="lname">Last Name</label>
+			<input type="text" id="lname" name="lastname" placeholder="Your last name..">
+			
+			<label for="category">Category</label>
+			<select id="category" name="category">
+				<option value="olives">Shop</option>
+				<option value="feedback">Feedback</option>
+				<option value="question">Question</option>
+			</select>
+			
+		<label for="subject">Subject</label>
+		<textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+			
+		<label for="_replyto">E-Mail</label>
 		<input type="email" name="_replyto" placeholder="dini mail">
+		
 		<input type="submit" value="Send">
 	</form>
 	</div>
@@ -96,17 +96,17 @@
 	
 	
 	
-	<footer id="footer">
-		<div id="footer_left" class="footer">&copy; Aco Grčka</div>
-		<div id="footer_right" class="footer">
-			<a href="https://www.instagram.com/aco.grcka/">Insta: Aco.Grcka</a>
-			<a href="#">Contact</a>
-			<a href="#">Newsletter</a>
-			<a href="#verlinkung_home">Nach Oben</a>
-		</div>
-	</footer>
+		<footer id="footer" class="contact">
+			<div id="footer_left" class="footer">&copy; Aco Grčka</div>
+			<div id="footer_right" class="footer">
+				<a href="https://www.instagram.com/aco.grcka/">Insta: Aco.Grcka</a>
+				<a href="#">Contact</a>
+				<a href="#">Newsletter</a>
+				<a href="#verlinkung_home">Nach Oben</a>
+			</div>
+		</footer>
 	
-	
+	</section>
 	<!-- ----- ----- ----- -->
   
   
