--- a/html/contact.html
+++ b/html/contact.html
@@ -67,7 +67,7 @@
 	
 	
 	
-	
+		<h1>Επικοινωνία</h1>
 		<form id="contact" action="https://formspree.io/aco.grcka@gmail.com" method="POST">
 			<label for="fname">First Name</label>
 			<input type="text" id="fname" name="firstname" placeholder="Your name..">
