--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		<div id="footer_left" class="footer">&copy; Aco Grčka</div>
 		<div id="footer_right" class="footer">
 			<a href="https://www.instagram.com/aco.grcka/">Insta: Aco.Grcka</a>
-			<a href="html/404.html">Επικοινωνία</a>
+			<a href="html/contact.html">Επικοινωνία</a>
 			<a href="html/404.html">Ενημερωτικό δελτίο</a>
 			<a href="#verlinkung_home">ανεβαίνω</a>
 		</div>
